--- a/.github/workflows/infra-project.yml
+++ b/.github/workflows/infra-project.yml
@@ -445,9 +445,48 @@ jobs:
           azcliversion: latest
           inlineScript: |
             az account set --subscription "${{ env.admin_bicep_input_keyvault_subscription }}"
-            echo "common_sp_appid_value=$(az keyvault secret show --vault-name \"${{ env.admin_bicep_kv_fw }}\" --name \"${{ env.common_sp_appid_seeding_kv_name }}\" --query 'value' --output tsv)" >> $GITHUB_ENV
-            echo "common_sp_secret_value=$(az keyvault secret show --vault-name \"${{ env.admin_bicep_kv_fw }}\" --name \"${{ env.common_sp_secret_seeding_kv_name }}\" --query 'value' --output tsv)" >> $GITHUB_ENV
-            echo "project_sp_oid_value=$(az keyvault secret show --vault-name \"${{ env.admin_bicep_kv_fw }}\" --name \"${{ env.project_service_principal_OID_seeding_kv_name }}\" --query 'value' --output tsv)" >> $GITHUB_ENV
+            
+            echo "=== Attempting to retrieve secrets from Key Vault ==="
+            echo "Key Vault: ${{ env.admin_bicep_kv_fw }}"
+            echo "Subscription: ${{ env.admin_bicep_input_keyvault_subscription }}"
+            echo "Secret 1: ${{ env.common_sp_appid_seeding_kv_name }}"
+            echo "Secret 2: ${{ env.common_sp_secret_seeding_kv_name }}"
+            echo "Secret 3: ${{ env.project_service_principal_OID_seeding_kv_name }}"
+            
+            # Test Key Vault access
+            echo "Testing Key Vault access..."
+            az keyvault secret list --vault-name "${{ env.admin_bicep_kv_fw }}" --query '[].name' -o tsv || echo "Failed to list secrets"
+            
+            # Retrieve secrets with error handling
+            echo "Retrieving common_sp_appid..."
+            APPID=$(az keyvault secret show --vault-name "${{ env.admin_bicep_kv_fw }}" --name "${{ env.common_sp_appid_seeding_kv_name }}" --query 'value' --output tsv 2>&1)
+            if [ $? -eq 0 ]; then
+              echo "✓ Retrieved common_sp_appid (length: ${#APPID})"
+              echo "common_sp_appid_value=$APPID" >> $GITHUB_ENV
+            else
+              echo "✗ Failed to retrieve common_sp_appid: $APPID"
+              echo "common_sp_appid_value=" >> $GITHUB_ENV
+            fi
+            
+            echo "Retrieving common_sp_secret..."
+            SECRET=$(az keyvault secret show --vault-name "${{ env.admin_bicep_kv_fw }}" --name "${{ env.common_sp_secret_seeding_kv_name }}" --query 'value' --output tsv 2>&1)
+            if [ $? -eq 0 ]; then
+              echo "✓ Retrieved common_sp_secret (length: ${#SECRET})"
+              echo "common_sp_secret_value=$SECRET" >> $GITHUB_ENV
+            else
+              echo "✗ Failed to retrieve common_sp_secret: $SECRET"
+              echo "common_sp_secret_value=" >> $GITHUB_ENV
+            fi
+            
+            echo "Retrieving project_sp_oid..."
+            OID=$(az keyvault secret show --vault-name "${{ env.admin_bicep_kv_fw }}" --name "${{ env.project_service_principal_OID_seeding_kv_name }}" --query 'value' --output tsv 2>&1)
+            if [ $? -eq 0 ]; then
+              echo "✓ Retrieved project_sp_oid (length: ${#OID})"
+              echo "project_sp_oid_value=$OID" >> $GITHUB_ENV
+            else
+              echo "✗ Failed to retrieve project_sp_oid: $OID"
+              echo "project_sp_oid_value=" >> $GITHUB_ENV
+            fi
 
       - name: 03b_Validate_Service_Principal_Credentials
         run: |
