--- a/.github/workflows/infra-project.yml
+++ b/.github/workflows/infra-project.yml
@@ -791,25 +791,27 @@ jobs:
       - name: 14_Generate_Dynamic_Network_Parameters
         working-directory: ${{ github.workspace }}/azure-enterprise-scale-ml/environment_setup/aifactory/bicep/scripts
         run: |
-          sudo pwsh -Command "./genDynamicNetworkParamFile.ps1" \
-            -spObjId '${{ env.common_sp_appid_value }}' \
-            -spSecret '${{ env.common_sp_secret_value }}' \
-            -BYO_subnets '${{ env.BYO_subnets }}' \
-            -network_env '${{ env.network_env }}' \
-            -useServicePrincipal \
-            -bicepPar1 '../../../../../aifactory/parameters/10-esml-globals-1.json' \
-            -bicepPar2 '../../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json' \
-            -bicepPar3 '../../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json' \
-            -bicepPar4 '../../../../../aifactory/parameters/21-22-esml-prj-parameters.json' \
-            -bicepPar5 '../../../../../aifactory/parameters/10-esml-globals-override.json' \
-            -filePath '../../../../../aifactory/parameters/' \
-            -env '${{ env.dev_test_prod }}' \
-            -locationSuffixADO '${{ env.admin_locationSuffix }}' \
-            -aifactorySuffixRGADO '${{ env.admin_aifactorySuffixRG }}' \
-            -projectNumber '${{ env.project_number_000 }}' \
-            -subscriptionId '${{ env.dev_test_prod_sub_id }}' \
-            -commonRGNamePrefixVar '${{ env.admin_aifactoryPrefixRG }}' \
-            -projectTypeADO '${{ env.admin_projectType }}'
+          sudo pwsh -Command '
+          & "./genDynamicNetworkParamFile.ps1" `
+            -spObjId "${{ env.common_sp_appid_value }}" `
+            -spSecret "${{ env.common_sp_secret_value }}" `
+            -BYO_subnets "${{ env.BYO_subnets }}" `
+            -network_env "${{ env.network_env }}" `
+            -useServicePrincipal `
+            -bicepPar1 "../../../../../aifactory/parameters/10-esml-globals-1.json" `
+            -bicepPar2 "../../../../../aifactory/parameters/10-esml-globals-2-12_13_21_22.json" `
+            -bicepPar3 "../../../../../aifactory/parameters/10-esml-globals-4-13_21_22.json" `
+            -bicepPar4 "../../../../../aifactory/parameters/21-22-esml-prj-parameters.json" `
+            -bicepPar5 "../../../../../aifactory/parameters/10-esml-globals-override.json" `
+            -filePath "../../../../../aifactory/parameters/" `
+            -env "${{ env.dev_test_prod }}" `
+            -locationSuffixADO "${{ env.admin_locationSuffix }}" `
+            -aifactorySuffixRGADO "${{ env.admin_aifactorySuffixRG }}" `
+            -projectNumber "${{ env.project_number_000 }}" `
+            -subscriptionId "${{ env.dev_test_prod_sub_id }}" `
+            -commonRGNamePrefixVar "${{ env.admin_aifactoryPrefixRG }}" `
+            -projectTypeADO "${{ env.admin_projectType }}"
+          '
 
       - name: 15_Check_Private_DNS_Zones
         uses: azure/cli@v2
